# FFmpegSimple

./: CMakeLists.txt  README.md
source/audio_resample/: audio_resample.cpp  audio_resample.h
source/capture_screen/: CMakeLists.txt  capture_screen.cpp
source/decode_video/: decode_video.cpp  decode_video.h
source/hw_decode/: hw_decode.cpp  hw_decode.h
source/hw_encode/: CMakeLists.txt  hw_encode.cpp  hw_encode.h
source/libx264_encode/: CMakeLists.txt  libx264_encode.cpp
source/libx265_encode/: CMakeLists.txt  libx265_encode.cpp
source/mediadata_parser/: simplest_mediadata_aac.cpp  simplest_mediadata_h264.cpp  simplest_mediadata_main.cpp  simplest_mediadata_sei.cpp
source/print_timestamp/: timestamp.cpp  timestamp.h
source/remuxer/: CMakeLists.txt  remuxer.cpp  remuxer.h
source/sdl_player/: CMakeLists.txt  player.cpp
source/test_cpp/: CMakeLists.txt  test.cpp  test.h
source/transcode/: transcode.cpp  transcode.h
